reduce docker image size using multistage