@@ -1,11 +1,20 @@
-FROM clojure:latest
+FROM clojure:latest as builder
 
-COPY . /usr/src/app
 WORKDIR /usr/src/app
+
+COPY . .
 
 RUN lein uberjar &&\
     mv target/*standalone.jar app-standalone.jar
 
+# use clean base image
+FROM openjdk:13-slim-buster
+
+WORKDIR /usr/src/app
+
+COPY --from=builder /usr/src/app/app-standalone.jar ./app.jar
+
 EXPOSE $port
 
-CMD ["java", "-jar", "-Xms256M", "-Xmx256M", "app-standalone.jar", "-m", "rss-feed-reader.app"]
+CMD ["java","-XX:+UseContainerSupport","-XX:MaxRAMPercentage=85","-XX:+UnlockExperimentalVMOptions","-XX:+UseZGC", \
+     "-jar", "-Xms256M", "-Xmx256M", "app.jar", "-m", "rss-feed-reader.app"]
